# MyPaperAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PHASE2_SUMMARY.md  README.md  llm-price.txt  pyproject.toml  run_my_paper_agent.sh  run_ui.py
.claude/: settings.local.json
.streamlit/: config.toml
docs/: COMMANDS.md  CONTRIBUTING.md  PHASE2_SUMMARY.md  README.md  STREAMLIT_UI_SUMMARY.md
scripts/: launch_terminal.sh  verify_projects.py
src/: cli.py
src/agents/: author_info.py  base.py  qa_agent.py  quiz_generator.py  summarizer.py
src/core/: __init__.py  note_manager.py  paper_manager.py  project_manager.py  qa_manager.py
src/discovery/: arxiv_search.py
src/processing/: metadata_parser.py  pdf_extractor.py
src/rag/: chunker.py  embeddings.py  retriever.py  vector_store.py
src/ui/: README.md  __init__.py  app.py  ui_helpers.py
src/ui/components/: paper_table.py
src/ui/pages/: __init__.py  add_paper.py  discover.py  library.py  paper_detail.py  projects.py  search.py  settings.py
src/utils/: config.py  database.py
tests/: conftest.py  demo_pdf_extraction.py  test_config.py  test_metadata_parser.py  test_pdf_extractor.py
